# Project-5.2-LRU

./: CMakeLists.txt  HashTableDictionary.cpp  Makefile  README.md  RunMetaData.hpp  RunResults.hpp  TraceConfig.hpp  guevara_nick_project5_part2_report.md  lru_harness  lru_harness.cpp  lru_profile_N_1024_S_23.trace  lru_profile_N_2048_S_23.trace  lru_profile_N_4096_S_23.trace  lru_profile_N_8192_S_23.trace  lru_results.csv  lru_tracegen  lru_tracegen.cpp  map16384.txt  map4096.txt  results.csv  standalone
